crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_streaming_mixed_blocks.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Explain                                                                      "
"                                                                                "
" · First paragraph complete.                                                    "
"   fn example() {}                                                              "
"   Now continuin                                                                "
"   ▌                                                                            "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Act │ 80 tokens │ Generating                                                  "
