crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_streaming_partial_prose.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Explain this                                                                 "
"                                                                                "
" ● Hello, I'm here to hel                                                       "
"   ▌                                                                            "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Act │ 23 tokens │ Generating                                                  "
