crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_tool_complete.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Find auth files                                                              "
"                                                                                "
"✓ glob **/*auth*.rs → 3 files                                                   "
"  src/auth/mod.rs                                                               "
"  src/auth/jwt.rs                                                               "
"  src/auth/session.rs                                                           "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ Ready                                                                  "
