crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_tool_error.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ✗ read(path="/nonexistent") → file not found                                   "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ Ready                                                                  "
