crates/crucible-cli/tests/snapshots/tui_snapshot_tests__conv_tool_running.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" > Find auth files                                                              "
"                                                                                "
" ● Let me search for authentication-related files.                              "
"                                                                                "
" ◐ grep(pattern="auth", type="rs")                                              "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Act │ Tool running                                                            "
