crates/crucible-cli/tests/snapshots/tui_snapshot_tests__dialog_confirm.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Confirm Action ──────────────────────┐                    "
"                    │                                      │                    "
"                    │   Are you sure you want to proceed?  │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │       [Yes]         [No]             │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
