crates/crucible-cli/tests/snapshots/tui_snapshot_tests__dialog_confirm_focused_cancel.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Delete File ─────────────────────────┐                    "
"                    │                                      │                    "
"                    │     This action cannot be undone.    │                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │       [Yes]         [No]             │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
