crates/crucible-cli/tests/snapshots/tui_snapshot_tests__dialog_info.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Help ────────────────────────────────────────┐                "
"                │Press Ctrl+C to exit                          │                "
"                │Press ? for help                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │        [Press Enter or Esc to close]         │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
