crates/crucible-cli/tests/snapshots/tui_snapshot_tests__dialog_info_multiline.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ┌ Keyboard Shortcuts ──────────────────────────┐                "
"                │Navigation:                                   │                "
"                │  j/k - Move down/up                          │                "
"                │  h/l - Move left/right                       │                "
"                │                                              │                "
"                │Actions:                                      │                "
"                │  Enter - Confirm                             │                "
"                │  Esc - Cancel                                │                "
"                │  q - Qu[Press Enter or Esc to close]         │                "
"                └──────────────────────────────────────────────┘                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
