crates/crucible-cli/tests/snapshots/tui_snapshot_tests__dialog_over_conversation.snap
---
source: crates/crucible-cli/tests/tui_snapshot_tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    ┌ Continue Analysis ───────────────────┐                    "
"                    │                                      │                    "
"                    │This will analyze all files. Continue?│                    "
"                    │                                      │                    "
"                    │                                      │                    "
"                    │       [Yes]         [No]             │                    "
"                    │                                      │                    "
"                    └──────────────────────────────────────┘                    "
" > What is the project structure?                                               "
"                                                                                "
" ● Let me analyze the codebase.                                                 "
"                                                                                "
"                                                                                "
" >                                                                              "
"                                                                                "
"▸ Plan │ ollama/llama3.2 │ Ready                                                "
